RELEASE 2211_6.0